lib_LTLIBRARIES = librtcom-accounts-ui-client.la
librtcom_accounts_ui_client_la_CFLAGS = $(ACCOUNTS_UI_CFLAGS) $(DGETTEXT)
librtcom_accounts_ui_client_la_LDFLAGS = $(ACCOUNTS_UI_LIBS)
librtcom_accounts_ui_client_la_SOURCES = client.c

CLEANFILES = $(BUILT_SOURCES)

MAINTAINERCLEANFILES = Makefile.in
